# posixmqcontrol

./: CMakeLists.txt  LICENSE  README.md  posixmqcontrol.1  posixmqcontrol.c  posixmqcontroltest8qs.sh  posixmqcontroltest8x64.sh  posixmqcontroltestsane.sh
